<resources>
    <string name="app_name">Listado</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="registrar">Registrar</string>
    <string name="consultar">Consultar</string>
    <string name="regresar">Regresar</string>
    <string name="nombre">Nombre de la empresa</string>
    <string name="correo">Correo Electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="guardar">Guardar</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="automotriz">Automotriz</string>
    <string name="alimenticio">Alimenticio</string>
    <string name="farmaceutico">Farmacéutico</string>
    <string name="error">Dato necesario</string>
    <string name="errorTel">Número inválido</string>
    <string name="errorCor">Correo inválido</string>
    <string name="correcto">Éxito al guardar</string>
    <string name="tipo">Tipo</string>
    <string name="archivo">datos.txt</string>
    <string name="imageView">Sin contenido</string>
    <string name="toastMensaje">"El id de la empresa es: "</string>
    <string name="ingresar">Ingresa tu nombre</string>
    <string name="empresa">Registra la empresa</string>
    <string name="borrar">Borrar registros</string>
    <string name="mensaje">Registros borrados</string>
    <string name="positivo">Regresar</string>
    <string name="negativo">Registrar</string>
    <string name="alDiaMen">No hay elementos a mostrar</string>
    <string name="importante">¡Importante!</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="pregunta">Se van a eliminar los registros. ¿Deseas continuar?</string>
    <string name="mensajeNo">No se borraron los registros</string>
    <string name="maquina">maquina</string>
    <string name="editar">¿Deseas modificar el registro?</string>
    <string name="modificar">Modificar elemento</string>
    <string name="eliminar">Eliminar registro</string>
    <string name="keyId" translatable="false">id</string>
    <string name="keyIdentificador" translatable="false">identificador</string>
    <string name="nomId" translatable="false">id</string>
    <string name="nomNombre" translatable="false">nombre</string>
    <string name="nomCorreo" translatable="false">Correo</string>
    <string name="nomTelefono" translatable="false">telefono</string>
    <string name="nomTipo" translatable="false">tipo</string>
    <string name="idenCorreo" translatable="false">\@</string>
    <string name="vacio" translatable="false"></string>
</resources>
